# flutter_opengl

./: .gitignore  .metadata  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
SCRIPTS/: setupOpenCV-android.sh
android/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro  settings.gradle
android/cpp/: RendererController.cpp  RendererController.h  Shader.cpp  Shader.h  common.hpp  native-lib.cpp  renderer.cpp  renderer.h  shaders.cpp  shaders.h
android/cpp/ndk/: common.hpp  native-lib.cpp  texture.cpp  texture.h
android/cpp/shaders/: Cube.cpp  Cube.h  Shader1.cpp  Shader1.h  Shader2.cpp  Shader2.h  Shader3.cpp  Shader3.h
android/src/glm/ext/: matrix_transform.hpp
android/src/glm/gtc/: quaternion.hpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/bavagnoli/flutteropengl/: BmpManager.java  FlutteropenglPlugin.java  JNIUtils.java  OpenGLNDKController.java
android/src/main/java/com/bavagnoli/opengl/: BmpManager.java  JNIUtils.java  OpenGLNDKController.java  OpenglPlugin.java
android/src/main/java/com/example/flutter_opengl/: FlutterOpenglPlugin.java
example/: .metadata  README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/bavagnoli/flutteropengl_example/: MainActivity.java
example/android/app/src/main/java/com/bavagnoli/opengl_example/: MainActivity.java
example/android/app/src/main/java/com/example/flutter_opengl_example/: MainActivity.java
example/android/app/src/main/kotlin/com/example/flutter_opengl_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: Utils.dart  controls.dart  edit_shader.dart  main.dart  main_in_deep.dart  shader_widget.dart  shaders.dart  shadertoy.dart  states.dart  test_widget.dart
example/lib/controls/: ShaderButtons.dart  controls.dart  texture_chooser.dart  texture_sizes.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutteropengl.podspec  opengl.podspec
ios/Classes/: FlutteropenglPlugin.h  FlutteropenglPlugin.m  OpenglPlugin.h  OpenglPlugin.m  SwiftFlutteropenglPlugin.swift  SwiftOpenglPlugin.swift
lib/: flutter_opengl.dart  flutter_opengl_ffi.dart  flutter_opengl_method_channel.dart  flutter_opengl_platform_interface.dart  flutteropengl.dart  opengl_texture.dart
lib/src/: flutter_opengl.dart  flutter_opengl_ffi.dart  flutter_opengl_method_channel.dart  flutter_opengl_platform_interface.dart  ogl_utils.dart  opengl_controller.dart  opengl_texture.dart
linux/: CMakeLists.txt  fl_my_texture_gl.cc  flutter_opengl_plugin.cc  opencv_camera.cpp  opencv_camera.h  test.cpp
linux/include/: fl_my_texture_gl.h  test.h
linux/include/flutter_opengl/: flutter_opengl_plugin.h
src/: Renderer.cpp  Renderer.h  Sampler2D.cpp  Sampler2D.h  Shader.cpp  Shader.h  common.h  ffi.cpp  ffi.h  opencv_capture.cpp  opencv_capture.h  uniformQueue.cpp  uniformQueue.h
src/ndk/: ndk.cpp
test/: flutter_opengl_method_channel_test.dart  flutter_opengl_test.dart  flutteropengl_test.dart  opengl_test.dart
windows/: CMakeLists.txt  fl_my_texture_gl.cc  fl_my_texture_gl.h  flutter_opengl_plugin.cpp  flutter_opengl_plugin.h  flutter_opengl_plugin_c_api.cpp
windows/include/flutter_opengl/: flutter_opengl_plugin_c_api.h
